1. replace CoordsViewset on CoordsApiView with get and post methods
