# fstr_api/static/openapi-schema.yml
@@ -22,6 +22,7 @@ tags:
 paths:
   /users:
     get:
+      summary: Method to get list of all Users
       tags:
         - users
       operationId: listUsers
@@ -66,12 +67,13 @@ paths:
                 $ref: '#/components/schemas/Error'
   /coords:
     get:
+      summary: Method to get coordinates of pereval
       tags:
         - coordinates
       operationId: listCoordinates
       description: List coordinates for all perevals
       responses:
-        '201':
+        '200':
           description: Success answer with coordinates to pereval
           content:
             application/json:
@@ -84,17 +86,24 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
     post:
+      summary: Method to add coordinates of pereval
       tags:
         - coordinates
       operationId: addCoordinates
-      description: Add coordinates to pereval
+      description: Add pereval coordinates
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Coord"
       responses:
-        '200':
-          description: Coordinates were successfully added
+        '201':
+          description: New coordinated have been successfully added
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Coords'
+                $ref: '#/components/schemas/Coord'
         'default':
           description: All other events
           content:
